<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mpWeekDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/saturday"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mpWorkHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f5fbff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />


        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="8:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="15dp"
                android:text="20:00"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorTextHint" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorTextHint" />

    <GridLayout
        android:id="@+id/mpCalendarMonthGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite" />
</LinearLayout>